--- a/mern-crud-service/package.json
+++ b/mern-crud-service/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.15"
   }
 }
